[gd_scene load_steps=13 format=2]

[ext_resource path="res://challenges/week3/gfx/map/front.png" type="Texture" id=1]
[ext_resource path="res://challenges/week3/gfx/map/background.jpg" type="Texture" id=2]
[ext_resource path="res://challenges/week3/scenes/main.gd" type="Script" id=3]
[ext_resource path="res://challenges/week3/gfx/map/mouse_pointer.png" type="Texture" id=4]
[ext_resource path="res://challenges/week3/scenes/debug.gd" type="Script" id=5]
[ext_resource path="res://challenges/week3/scenes/door/door.tscn" type="PackedScene" id=6]
[ext_resource path="res://challenges/week3/scenes/diedMessage.gd" type="Script" id=7]
[ext_resource path="res://challenges/week3/sfx/gun-sound-4.wav" type="AudioStream" id=8]
[ext_resource path="res://challenges/week3/sfx/pistol-gun-cocking.wav" type="AudioStream" id=9]
[ext_resource path="res://challenges/week3/scenes/bullets/bullets.tscn" type="PackedScene" id=10]
[ext_resource path="res://common/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 2
outline_color = Color( 0.905882, 0.760784, 0.266667, 1 )
font_data = ExtResource( 11 )

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="sfx" type="Node" parent="."]

[node name="shoot" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 8 )

[node name="reload" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 9 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 2 )

[node name="characters" type="Node" parent="."]

[node name="left_door" type="Node" parent="characters"]

[node name="left_door_character_position" type="Position2D" parent="characters/left_door"]
position = Vector2( 187, 280 )

[node name="center_door" type="Node" parent="characters"]

[node name="center_door_character_position" type="Position2D" parent="characters/center_door"]
position = Vector2( 531, 280 )

[node name="right_door" type="Node" parent="characters"]

[node name="right_door_character_position" type="Position2D" parent="characters/right_door"]
position = Vector2( 855, 280 )

[node name="doors" type="Node" parent="."]

[node name="left_door" parent="doors" instance=ExtResource( 6 )]
position = Vector2( 168, 280 )

[node name="center_door" parent="doors" instance=ExtResource( 6 )]
position = Vector2( 512, 280 )

[node name="right_door" parent="doors" instance=ExtResource( 6 )]
position = Vector2( 836, 281 )

[node name="foreground" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 1 )

[node name="bullets" parent="." instance=ExtResource( 10 )]
position = Vector2( 834, 560 )

[node name="debug" type="Node2D" parent="."]
z_index = 6
z_as_relative = false
script = ExtResource( 5 )

[node name="diedMessage" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="diedMessage"]
margin_left = -20.0
margin_top = -15.0
margin_right = 1042.0
margin_bottom = 619.0
color = Color( 0.345098, 0.054902, 0.0235294, 0.615686 )

[node name="Label" type="Label" parent="diedMessage"]
margin_left = -20.0
margin_top = 252.0
margin_right = 1042.0
margin_bottom = 266.0
text = "Game over!"
align = 1

[node name="Button" type="Button" parent="diedMessage"]
margin_left = 468.0
margin_top = 286.0
margin_right = 556.0
margin_bottom = 316.0
text = "Try again"

[node name="money" type="Label" parent="."]
margin_left = 9.0
margin_top = 555.0
margin_right = 275.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 1 )
text = "0â‚¬"

[node name="mouse_pointer" type="Sprite" parent="."]
texture = ExtResource( 4 )

[connection signal="reload" from="." to="bullets" method="_on_main_reload"]
[connection signal="shoot" from="." to="bullets" method="_on_main_shoot"]
[connection signal="door_closed" from="doors/left_door" to="." method="_on_left_door_door_closed"]
[connection signal="door_open" from="doors/left_door" to="." method="_on_left_door_door_open"]
[connection signal="waiting_guess" from="doors/left_door" to="." method="_on_left_door_waiting_guess"]
[connection signal="door_closed" from="doors/center_door" to="." method="_on_center_door_door_closed"]
[connection signal="door_open" from="doors/center_door" to="." method="_on_center_door_door_open"]
[connection signal="waiting_guess" from="doors/center_door" to="." method="_on_center_door_waiting_guess"]
[connection signal="door_closed" from="doors/right_door" to="." method="_on_right_door_door_closed"]
[connection signal="door_open" from="doors/right_door" to="." method="_on_right_door_door_open"]
[connection signal="waiting_guess" from="doors/right_door" to="." method="_on_right_door_waiting_guess"]
[connection signal="pressed" from="diedMessage/Button" to="diedMessage" method="_on_Button_pressed"]
